k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: angular-app-service
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: angular-app
